compiler/arc/src/serializer/snapshots/arc__serializer__tests__prerelease_lume_version_failure.snap
---
source: compiler/arc/src/serializer/tests.rs
expression: parser.parse().unwrap_err()
---
ArcfileIncompatibleLumeVersion {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "Package \"sample\" {\n            version = \"1.0.0\"\n            lume_version = \"1.0.0-rc3\"\n        }",
        package: PackageId(
            0,
        ),
    },
    range: 76..87,
    current: Version {
        major: 1,
        minor: 0,
        patch: 0,
        pre: Prerelease("rc2"),
    },
    required: VersionReq {
        comparators: [
            Comparator {
                op: Caret,
                major: 1,
                minor: Some(
                    0,
                ),
                patch: Some(
                    0,
                ),
                pre: Prerelease("rc3"),
            },
        ],
    },
}
