compiler/arc/src/serializer/snapshots/arc__serializer__tests__without_name.snap
---
source: compiler/arc/src/serializer/tests.rs
description: "Package {}"
---
ArcfileMissingName {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "Package {}",
        package: PackageId(
            0,
        ),
    },
    range: 0..10,
}
